--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 
 @font-face {
-   font-family:'Graphik LCG','sans-serif';
+   font-family:'Graphik LCG';
    src: url('../fonts/GraphikLCG-Regular.woff2') format('woff2'), url('../fonts/GraphikLCG-Regular.woff') format('woff');
    font-weight: 400;
    font-style: normal;
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-   font-family:'Graphik LCG','sans-serif';
+   font-family:'Graphik LCG';
    src: url('../fonts/GraphikLCG-Bold.woff2') format('woff2'), url('../fonts/GraphikLCG-Bold.woff') format('woff');
    font-weight: 700;
    font-style: normal;
